<resources>
    <string name="app_name">DroidFS</string>
    <string name="create_volume">Create volume</string>
    <string name="open">Open</string>
    <string name="create">Create</string>
    <string name="change_password">Change password</string>
    <string name="password">Password</string>
    <string name="import_files">Import/Encrypt files</string>
    <string name="import_folder">Import/Encrypt folder</string>
    <string name="discovering_files">Discovering files…</string>
    <string name="mkdir">Create folder</string>
    <string name="dir_empty">Directory Empty</string>
    <string name="search">Search</string>
    <string name="search_files_and_folders">Search files and folders</string>
    <string name="no_search_results">No matching files or folders</string>
    <string name="warning">Warning !</string>
    <string name="ask_lock_volume">Are you sure you want to lock this volume ?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_folder_name">Folder Name:</string>
    <string name="error">Error</string>
    <string name="error_filename_empty">Please enter a name</string>
    <string name="error_mkdir">Folder creation failed.</string>
    <string name="success_import">Import successful !</string>
    <string name="success_import_msg">The selected files have been successfully imported.</string>
    <string name="import_failed">Import of %s failed.</string>
    <string name="export_failed">Export of %s failed.</string>
    <string name="success_export">Export successful !</string>
    <string name="remove_failed">Deletion of %s failed.</string>
    <string name="passwords_mismatch">Passwords don\'t match</string>
    <string name="dir_not_empty">The selected directory isn\'t empty</string>
    <string name="create_volume_failed">The volume creation has failed.</string>
    <string name="open_volume_failed">Open failed</string>
    <string name="share_chooser">Share File</string>
    <string name="storage_perm_denied">Storage permission denied</string>
    <string name="storage_perm_denied_msg">DroidFS can\'t work without storage permissions.</string>
    <string name="get_size_failed">Failed to retrieve file size.</string>
    <string name="parent_folder">Parent Folder</string>
    <string name="empty_volume_path">Please enter the volume path</string>
    <string name="empty_volume_name">Please enter the volume name</string>
    <string name="external_open">Open with external app</string>
    <string name="single_delete_confirm">Are you sure you want to delete %s ?</string>
    <string name="multiple_delete_confirm">Are you sure you want to delete these %s items ?</string>
    <string name="location">Location: %s</string>
    <string name="total_size">Total size: %s</string>
    <string name="import_from_other_volume">Import from another volume</string>
    <string name="read_file_failed">Failed to open this file.</string>
    <string name="volume">Volume: %s</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ask_for_wipe">Do you want to wipe the original files ?</string>
    <string name="wipe_failed">Wiping failed: %s</string>
    <string name="wipe_successful">Files successfully wiped !</string>
    <string name="rename">Rename</string>
    <string name="rename_title">New name:</string>
    <string name="rename_failed">Failed to rename %s</string>
    <string name="sort_order">Sort order:</string>
    <string name="change_password_failed">Operation failed. Please check your old password.</string>
    <string name="share_menu_label">Encrypt with DroidFS</string>
    <string name="share_intent_parsing_failed">Failed to handle the share request.</string>
    <string name="listdir_null_error_msg">Unable to access this directory</string>
    <string name="fingerprint_save_checkbox_text">Save password hash using fingerprint</string>
    <string name="fingerprint_instruction">Please touch the fingerprint sensor</string>
    <string name="illegal_block_size_exception">IllegalBlockSizeException</string>
    <string name="illegal_block_size_exception_msg">This can happen if you have added a new fingerprint. Resetting hash storage can solve this problem.</string>
    <string name="reset_hash_storage">Reset hash storage</string>
    <string name="MAC_verification_failed">Signature/MAC verification failed. Either Android KeyStore or the saved hash has been modified. Resetting hash storage can solve this problem.</string>
    <string name="hash_storage_reset">Hash storage successfully reset</string>
    <string name="encrypt_action_description">Encrypting and saving password hash.</string>
    <string name="decrypt_action_description">Decrypting password hash.</string>
    <string name="title_activity_settings">DroidFS Settings</string>
    <string name="explorer">Explorer</string>
    <string name="settings_title_sort_order">Default sort order</string>
    <string name="usf_decrypt">Allow exporting/decrypting files</string>
    <string name="usf_share">Allow sharing files via the android share menu</string>
    <string name="usf_open">Allow opening files with other applications</string>
    <string name="usf_screenshot">Allow screenshots</string>
    <string name="usf_fingerprint">Allow saving password hash using fingerprint</string>
    <string name="usf_volume_management">Volume Management</string>
    <string name="unsafe_features">Unsafe Features</string>
    <string name="manage_unsafe_features">Manage unsafe features</string>
    <string name="manage_unsafe_features_summary">Enable/Disable unsafe features</string>
    <string name="usf_home_warning_msg">DroidFS aims to be as secure as possible. However, security often involves lack of comfort. This is why DroidFS offers you additional unsafe features that you can enable and disable according to your needs.\n\nWarning: these features can be UNSAFE. Do not use them unless you know exactly what you are doing. It is highly recommended to read the documentation before enabling them.</string>
    <string name="see_unsafe_features">See unsafe features</string>
    <string name="open_as">Open as</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="playing_failed">Failed to play this file: %s</string>
    <string name="text">Text</string>
    <string name="save_failed">Save failed</string>
    <string name="file_saved">File saved !</string>
    <string name="ask_save">The file contains unsaved changes. Do you want to save them before exiting ?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="word_wrap">Word Wrap</string>
    <string name="outofmemoryerror_msg">OutOfMemoryError: This file is too large to be loaded in memory.</string>
    <string name="new_file">Create new file</string>
    <string name="enter_file_name">File name:</string>
    <string name="file_creation_failed">Failed to create the file.</string>
    <string name="loading">Loading…</string>
    <string name="loading_msg_create">Creating volume…</string>
    <string name="loading_msg_change_password">Changing password…</string>
    <string name="loading_msg_open">Opening volume…</string>
    <string name="loading_msg_export">Exporting files…</string>
    <string name="query_cursor_null_error_msg">Unable to access this file</string>
    <string name="about">About</string>
    <string name="github">GitHub</string>
    <string name="github_summary">The DroidFS repository on GitHub. Source code, documentation, bug tracker…</string>
    <string name="tangled">Tangled</string>
    <string name="tangled_summary">The DroidFS repository on Tangled. Unlike GitHub, Tangled is federated and fully free software. Source code, documentation, bug tracker…</string>
    <string name="share">Share</string>
    <string name="decrypt_files">Export/Decrypt</string>
    <string name="copy_failed">Copy of %s failed.</string>
    <string name="copy_success">Copy successful !</string>
    <string name="add">Add</string>
    <string name="camera">Camera</string>
    <string name="picture_save_success">Picture saved to %s</string>
    <string name="picture_save_failed">Failed to save this picture.</string>
    <string name="video_save_success">Video saved to %s</string>
    <string name="file_collision_question">Another selected file will also be imported as %s. Do you want to overwrite it ?</string>
    <string name="file_overwrite_question">%s already exists, do you want to overwrite it ?</string>
    <string name="dir_overwrite_question">%s already exists, do you want to merge its content ?</string>
    <string name="rename_into_dir_question">%1$s is an existing directory, do you want to move %2$s inside ?</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="copy_menu_title">Copy</string>
    <string name="move_failed">Move of %s failed.</string>
    <string name="move_success">Move successful !</string>
    <string name="enter_timer_duration">Enter the timer duration (in s)</string>
    <string name="path_error">Failed to retrieve the selected path.</string>
    <string name="create_cant_write_error_msg">DroidFS doesn\'t have write access to this path. Please try another location.</string>
    <string name="add_cant_write_warning">DroidFS doesn\'t have write access to this path. Adding volume with read-only access.</string>
    <string name="sdcard_error_header">DroidFS can only write to removable SD cards under:</string>
    <string name="sdcard_error_add_footer">Adding volume with read-only access.</string>
    <string name="sdcard_error_create_footer">Please use a subdirectory of this path or internal storage.</string>
    <string name="slideshow_stopped">Slideshow stopped</string>
    <string name="slideshow_started">Slideshow started</string>
    <string name="ask_save_img_rotated">The image has been rotated. Do you want to save these changes and overwrite the original image ?</string>
    <string name="image_saved_successfully">Image changes successfully saved.</string>
    <string name="bitmap_compress_failed">Failed to compress the bitmap.</string>
    <string name="file_write_failed">Failed to write the file.</string>
    <string name="error_not_a_volume">Encrypted volume not recognized. Please check the selected path.</string>
    <string name="version">Version</string>
    <string name="error_cipher_null">Error cipher is null</string>
    <string name="key_permanently_invalidated_exception">KeyPermanentlyInvalidatedException</string>
    <string name="key_permanently_invalidated_exception_msg">It looks like you have added a new fingerprint. Saved passwords hash have become unusable.</string>
    <string name="usf_read_doc">You should read it carefully before enabling any of these options.</string>
    <string name="usf_doc">Unsafe features documentation</string>
    <string name="error_retrieving_filename">Unable to retrieve file name for URI: %s</string>
    <string name="hidden_volume">Hidden volume</string>
    <string name="error_slash_in_name">Volume name cannot contain slashes</string>
    <string name="hidden_volume_warning">Hidden volumes are stored in the app\'s internal storage. Other apps can\'t see these volumes without root access. However, if you uninstall DroidFS or clear the app\'s data, all your hidden volumes will be LOST. Be sure to make backups !</string>
    <string name="camera_perm_needed">Camera permission is needed to take photo.</string>
    <string name="choose_resolution">Choose a resolution</string>
    <string name="file_operations">File Operations</string>
    <string name="file_op_copy_msg">Copying files…</string>
    <string name="file_op_import_msg">Importing files…</string>
    <string name="close_volume">Close volume</string>
    <string name="sort_by">Sort By</string>
    <string name="lock_volume">Lock volume</string>
</resources>