<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
	    android:id="@+id/rename"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/rename"/>

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/icon_folder_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/validate"
        app:showAsAction="always"
        android:icon="@drawable/icon_check"/>

    <item
        android:id="@+id/sort"
        app:showAsAction="ifRoom"
        android:title="@string/sort_by"
        android:icon="@drawable/icon_sort"
        app:iconTint="?attr/menuIconColor"/>

    <item
        android:id="@+id/lock"
        app:showAsAction="ifRoom"
        android:title="@string/lock_volume"
        android:icon="@drawable/icon_lock"
        app:iconTint="?attr/menuIconColor"/>

    <item
        android:id="@+id/close"
        app:showAsAction="ifRoom"
        android:title="@string/close_volume"
        android:icon="@drawable/icon_close"
        app:iconTint="?attr/menuIconColor"/>

</menu>
